--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 
 <body>
-  <p>EJERCICIOS DE WEB RMORAMO, <h1>NADIA TE AMO LO HAGO PUBLICO AL CIBERESPACIO</h1></p>
+  <p><h1>EJERCICIOS DE WEB RMORAMO</h1></p>
 </body>
 </html>
