--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 
 <body>
-  <p><h1>EJERCICIOS DE WEB RMORAMO</h1></p>
+  <p><h1>HOLA, EN ESTA PAGINA REALIZARE LAS PRUEBAS EN MI INICIOS EN EL DESARROLLO WEB</h1></p>
 </body>
 </html>
