--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 
 <body>
   <p><h1>HOLA, EN ESTA PAGINA REALIZARE LAS PRUEBAS EN MI INICIOS EN EL DESARROLLO WEB</h1></p>
+  <p><h2>HOLA, EN ESTA PAGINA REALIZARE LAS PRUEBAS EN MI INICIOS EN EL DESARROLLO WEB</h2></p>
 </body>
 </html>
